[package]
name = "asset_proxy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.4"
ic-cdk = "0.16"
ic-cdk-macros = "0.16.0"
serde_bytes = "0.11.5"
serde = "1.0.152"
serde_cbor = "0.11"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.9"
itertools = "0.10"
num-traits = "0.2"
num = "0.4"
percent-encoding = "2.1"
ic-certification = "2.3.0"
ic-representation-independent-hash = "0.3"


